vlib/v/scanner/tests/unknown_comptime_var_err.out
vlib/v/scanner/tests/unknown_comptime_var_err.vv:2:9: error: @ must be used before keywords or compile time variables (e.g. `@type string` or `@FN`)
    1 | fn main() {
    2 |     _ = @DEF
      |            ^
    3 | }
Details: available compile time variables: @VROOT, @VMODROOT, @VEXEROOT, @FN, @METHOD, @MOD,
@STRUCT, @VEXE, @FILE, @DIR, @LINE, @COLUMN, @VHASH, @VCURRENTHASH, @VMOD_FILE, @VMODHASH,
@FILE_LINE, @LOCATION, @BUILD_DATE, @BUILD_TIME, @BUILD_TIMESTAMP
